--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
         <div class="transactions__container">
           <ul class="transactions__list">
             <li class="date">Data</li>
-            <li class="amount">Kwota operacji</li>
+            <li class="type">Typ</li>
             <li class="desc">Opis</li>
+            <li class="amount">Kwota operacji</li>
             <li class="balance">Saldo</li>
           </ul>
         </div>
