--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="form__field">
             <input type="text" name="username" id="username"  minlength="6" maxlength="16" pattern="(?=.*[A-Za-z]{5,})(?=.*\d)[A-Za-z\d]{6,16}" placeholder="Wpisz nazwę użytkownika" required/><br>
             <span id = "username__error" class="error__msg">
-              Pole musi zawierać 6-16 znaków, co najmniej 5 liter i 1 cyfrę
+              Pole musi zawierać co najmniej 5 liter i 1 cyfrę
             </span>
         </div>
           
@@ -117,10 +117,9 @@
             type="text"
             name="username"
             id="login__username"
-            pattern="(?=.*[A-Za-z]{5,})(?=.*\d)[A-Za-z\d]{6,16}"
             required
             minlength="6"
-            maxlength="20"
+            maxlength="25"
           />
           <label id="login__password__label" for="password">Hasło:</label>
           <input type="password" name="password" id="login__password" required minlength="6" />
